--- a/styles/modules.css
+++ b/styles/modules.css
@@ -105,11 +105,9 @@
   width: 90%;
   height: 15%;
 }
-
 .tree {
   position: absolute;
 }
-
 .tree img {
   width: 100%;
   height: 100%;
@@ -118,4 +116,8 @@
 /* FLOCK */
 .flock {
   position: absolute;
+}
+.flock img {
+  width: 100%;
+  height: 100%;
 }
