--- a/styles/modules.css
+++ b/styles/modules.css
@@ -16,7 +16,7 @@
   top: 0%;
   width: 25%;
   height:100%;
-  z-index: 1;
+  z-index: 5;
 }
 
 .menu-link {
@@ -25,7 +25,7 @@
   height: 83px;
   text-align: center;
   color: yellow;
-  z-index: 2;
+  z-index: 6;
 }
 
 #books-link {
@@ -37,6 +37,7 @@
 /* TOMBSTONE */
 .tombstone {
   position: absolute;
+  z-index: 3;
 }
 .tombstone img {
   position: absolute;
@@ -56,6 +57,7 @@
 /* GHOST */
 .ghost {
   position: absolute;
+  z-index: 4;
 }
 .ghost img {
   position: absolute;
@@ -66,7 +68,6 @@
 .ghost-img {
   width: 100%;
   height: 100%;
-  z-index: 0;
 }
 
 .cover-img {
@@ -104,6 +105,7 @@
   top: 45%;
   width: 90%;
   height: 15%;
+  z-index: 1;
 }
 .tree {
   position: absolute;
@@ -116,6 +118,7 @@
 /* FLOCK */
 .flock {
   position: absolute;
+  z-index: 7;
 }
 .flock img {
   width: 100%;
@@ -127,4 +130,10 @@
   position: absolute;
   width: 100%;
   height: 100%;
+  z-index: 2;
+}
+#fogDiv img {
+  position: absolute;
+  width: 30%;
+  height: 30%;
 }
