--- a/styles/modules.css
+++ b/styles/modules.css
@@ -131,9 +131,23 @@
   width: 100%;
   height: 100%;
   z-index: 2;
+  pointer-events: none;
 }
 #fogDiv img {
   position: absolute;
   width: 30%;
   height: 30%;
+}
+
+/* MOON */
+#moonDiv {
+  position: absolute;
+  left: 85%;
+  top: 3%;
+  width: 15%;
+  height: 20%;
+}
+#moonDiv img {
+  width: 100%;
+  height: 100%;
 }
