set post page background

--- a/styles/modules.css
+++ b/styles/modules.css
@@ -1,4 +1,5 @@
 #canvasWrap {
+  background-color: #040857;
   width: 100%;
   height: 100%;
   border:8px solid #000000;
@@ -151,19 +152,31 @@
 
 /* POST PAGE */
 #post-page-wrap {
+  background-color: black;
+  background-image: url('/media/ghosts_colr.png');
   width: 100%;
   height:100%;
   border-style: solid;
 }
-
 #textDiv {
  position:absolute;
  left:40%;
  top:0%;
  width:50%;
- height:80%;
+ height:85%;
  background-color:#FFFFFF;
  margin: 3%;
  padding:1%;
  overflow-y: scroll;
+}
+#imgDiv {
+ position:absolute;
+ margin: 3%;
+ left:10%;
+ width:25%;
+ height:70%;
+}
+#imgDiv img {
+ width: 80%;
+ height: 80%;
 }
