--- a/styles/modules.css
+++ b/styles/modules.css
@@ -54,7 +54,7 @@
 /* GHOST */
 .ghost {
   position: absolute;
-  z-index: 4;
+  z-index: 12;
 }
 .ghost img {
   position: absolute;
@@ -75,8 +75,9 @@
 }
 
 .title {
-  left: 59%;
-  top: 15%;
+  font-family: "Comic Sans MS";
+  left: 58%;
+  top: 12%;
   width: 10%;
   height: 20%;
   text-align:center;
@@ -126,9 +127,11 @@
 /* FOG */
 #fogDiv {
   position: absolute;
+  left: -5%;
+  top: -5%;
   width: 100%;
   height: 100%;
-  z-index: 2;
+  z-index: 11;
   pointer-events: none;
 }
 #fogDiv img {
