--- a/styles/modules.css
+++ b/styles/modules.css
@@ -221,3 +221,14 @@
   width: 100%;
   height: 100%;
 }
+
+/* CATALOG */
+#catalog-wrap {
+  color: white;
+}
+.cat-link {
+  color: white;
+}
+.cat-link:visited {
+  color: gray;
+}
