--- a/styles/modules.css
+++ b/styles/modules.css
@@ -224,14 +224,11 @@
 
 /* CATALOG */
 #catalog-wrap {
-  color: white;
+  color: black;
+  background-color: white;
+  width: 100%;
+  height: 100%;
 }
 #catalog-title {
-  color: white;
-}
-.cat-link {
-  color: white;
-}
-.cat-link:visited {
-  color: gray;
+  color: black;
 }
