--- a/styles/modules.css
+++ b/styles/modules.css
@@ -221,6 +221,17 @@
   width: 100%;
   height: 100%;
 }
+#catalog-p-link {
+  position: absolute;
+  left: 5%;
+  top: 49%;
+  width: 10%;
+  height: 15%;
+}
+#catalog-p-link img {
+  width: 100%;
+  height: 100%;
+}
 
 /* CATALOG */
 #catalog-wrap {
